# email_automation

./: .gitignore  README.md  pyproject.toml
src/: nodes.py
src/crew/: agents.py  crew.py  tasks.py  tools.py
